# optimap

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
tests/: test_init.py
