[tool.poetry]
name = "optimap"
version = "0.1.0"
description = "Optimized integrated intensity map method for spectral cubes"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/astropenguin/optimap"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
astropy = { git = "https://github.com/astropy/astropy.git", branch = "v5.0.x" }
numpy = "^1.22"
scikit-image = "^0.19"

[tool.poetry.dev-dependencies]
black = "^22.1"
matplotlib = "^3.5"
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
